<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2011 The Code Bakers
 * Authors: Cleuton Sampaio e Francisco Rodrigues
 * e-mail: thecodebakers@gmail.com
 * 
 * Site: http://thecodebakers.blogspot.com
 *
 * Licensed under the GNU GPL, Version 3.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://gplv3.fsf.org/
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * 
 * @author Cleuton Sampaio e Francisco Rogrigues - thecodebakers@gmail.com
 */
 -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:scrollbars="vertical"
	android:fadeScrollbars="false">
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
		android:layout_width="fill_parent"
	  	android:layout_height="fill_parent">
	  	
		<ImageView
			android:layout_centerHorizontal="true"
			android:src="@drawable/logo"
			android:id="@+id/imglogo" 
			android:adjustViewBounds="true"
			android:onClick="web"
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"
			></ImageView>	  	

		<TextView 
			android:layout_below="@+id/imglogo"
			style="@style/tituloBold"
			android:text="@string/msg_help_1" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit2"
			android:layout_centerHorizontal="true"
	    	/>
	    <TextView 
			android:layout_below="@+id/tit2"
			style="@style/conteudo"
			android:text="@string/msg_help_2" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit21"
			android:layout_centerHorizontal="true"/>
				
	    <ImageView
	    	android:layout_below="@+id/tit21"
			android:layout_alignParentLeft="true"
			android:id="@+id/img3"
			android:src="@drawable/hitme" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"	/>
			
		<TextView 
			android:layout_below="@+id/img3"
			style="@style/conteudo"
			android:text="@string/msg_hitme" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit3"/>
		
		<ImageView
			android:layout_below="@+id/tit3"
			android:layout_alignParentLeft="true"
			android:id="@+id/img4"
			android:src="@drawable/stand" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"	/>
			
		<TextView 
			android:layout_below="@+id/img4"
			style="@style/conteudo"
			android:text="@string/msg_stand" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit4"/>	
			
		<ImageView
		    android:layout_below="@+id/tit4"
		    android:layout_alignParentLeft="true"
			android:id="@+id/img5"
			android:src="@drawable/novo_jogo" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"	/>
			
		<TextView 
		    android:layout_below="@+id/img5"
			style="@style/conteudo"
			android:text="@string/msg_novo_jogo" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit5"/>	
		
		<TextView  
			android:layout_below="@+id/tit5"
			style="@style/tituloBold"
			android:text="@string/msg_pontos_cartas1" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit6"/>
		<TextView  
			android:layout_below="@+id/tit6"
			style="@style/titulo"
			android:text="@string/msg_pontos_cartas2_10" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit7"/>
		<TextView  
			android:layout_below="@+id/tit7"
			style="@style/titulo"
			android:text="@string/msg_pontos_cartas_ases" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit8"/>	
		<TextView  
			android:layout_below="@+id/tit8"
			style="@style/titulo"
			android:text="@string/msg_pontos_cartas_coringas" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content"  
			android:id="@+id/tit9"/>							

		<ImageView
			android:layout_below="@+id/tit9"
			android:layout_centerHorizontal="true"
			android:id="@+id/img6"
			android:src="@drawable/polegar_positivo" 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:onClick="fechar"/>
			
	</RelativeLayout>
</ScrollView>
